# mini-vocabook-rs

./: .env  Cargo.toml  README.md
.github/workflows/: release-axum.yml  release-tauri.yml  release.yml
api/: Cargo.toml
api/src/: lib.rs  routes.rs
api/src/record/: mod.rs  test.rs
api/src/user/: mod.rs  test.rs
api/src/word/: mod.rs  test.rs
api/src/wordbook/: mod.rs  test.rs
app/: package.json  pnpm-lock.yaml
app/src/: App.vue  http.ts  main.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src/api/: learning_record.ts  user.ts  word.ts  wordbook.ts
app/src/components/: DrawerNavigation.vue  LoginRegisterFrom.vue
app/src/model/: learning_record.ts  res.ts  user.ts  word.ts  wordbook.ts
app/src/router/: index.ts
app/src/store/: auth.ts  index.ts  learning.ts
app/src/views/: HomeView.vue  LearningView.vue  MemoryTestsView.vue  QuizView.vue  SpellingTestsView.vue  StatisticsView.vue  UserView.vue
common/: Cargo.toml
common/src/: db.rs  lib.rs  res.rs
common/src/dto/: learning_record_dto.rs  mod.rs  user_dto.rs  word_dto.rs
common/src/entity/: learning_record.rs  mod.rs  prelude.rs  user.rs  word.rs  word_wordbook_mapping.rs  wordbook.rs
script/: mini_vocabook_orm.py  sentence_spider.py  word_excel_loader.py
script/excel/: 大学英语六级词汇-乱序版.xlsx  大学英语四级词汇-乱序版.xlsx  考研考纲词汇5500.xlsx
service/: Cargo.toml
service/src/: mod.rs  record_service.rs  user_service.rs  word_service.rs  wordbook_service.rs
src/: main.rs
tauri-mini-vocabook/: package.json  pnpm-lock.yaml  vite.config.ts
tauri-mini-vocabook/.github/workflows/: release.yml
tauri-mini-vocabook/src/: App.vue  axios.http.ts  http.ts
tauri-mini-vocabook/src-tauri/: Cargo.toml  tauri.conf.json
tauri-mini-vocabook/src-tauri/icons/: icon.icns
tauri-mini-vocabook/src/api/: learning_record.ts  user.ts  word.ts  wordbook.ts
tauri-mini-vocabook/src/components/: DrawerNavigation.vue  LoginRegisterFrom.vue
tauri-mini-vocabook/src/model/: learning_record.ts  res.ts  user.ts  word.ts  wordbook.ts
tauri-mini-vocabook/src/router/: index.ts
tauri-mini-vocabook/src/store/: auth.ts  learning.ts
tauri-mini-vocabook/src/views/: HomeView.vue  LearningView.vue  MemoryTestsView.vue  QuizView.vue  SpellingTestsView.vue  StatisticsView.vue  UserView.vue
