[package]
name = "mini-vocabook-rs"
version = "0.1.0"
authors = ["Tfiyuen Lau<tfiyuenlau@foxmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "./api"}
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"

[workspace]
members = ["service", "api", "common"]
exclude = ["./tauri-mini-vocabook/src-tauri"]

[workspace.dependencies]
tower = "0"
tower-http = { version = "0", features = ["fs"] }
tower-cookies = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
sea-orm = { version = "0.12", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros", "debug-print"] }
log = "0.4"
dotenvy = "0.15"
anyhow = "1"
thiserror = "1"
rust-crypto = "0"
tracing = "0.1"
tracing-subscriber = "0.3"
paginate = "1.1"
