[package]
name = "api"
version = "0.1.0"
edition = "2021"

[lib]
name = "api"
path = "src/lib.rs"

[dependencies]
service = { path = "../service" }
common = { path = "../common" }

log = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true, features = ["multipart"] }
sea-orm = { workspace = true }
dotenvy = { workspace = true }
